nuclear/compiler/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    COMMA
    COMMENT

Grammar

Rule 0     S' -> normal_el
Rule 1     empty -> <empty>
Rule 2     attrs -> attrs attr
Rule 3     attrs -> attr
Rule 4     attrs -> empty
Rule 5     fn -> id LPAR expr RPAR
Rule 6     fn -> id LPAR RPAR
Rule 7     binop_expr -> expr PIPE expr
Rule 8     expr -> id
Rule 9     expr -> fn
Rule 10    expr -> binop_expr
Rule 11    assign_statement -> id ASSIGN expr
Rule 12    statement -> assign_statement
Rule 13    statement -> expr
Rule 14    static_attr -> tag_name ASSIGN QUOTE_1 NUMBER QUOTE_1
Rule 15    static_attr -> tag_name ASSIGN QUOTE_2 NUMBER QUOTE_2
Rule 16    static_attr -> tag_name ASSIGN NORMSTRING
Rule 17    tag_name -> ID
Rule 18    tag_name -> tag_name NAMESPACE_FLAG ID
Rule 19    exec_attr -> EXE_FLAG tag_name ASSIGN QUOTE_1 expr QUOTE_1
Rule 20    exec_attr -> EXE_FLAG tag_name ASSIGN QUOTE_2 expr QUOTE_2
Rule 21    event_attr -> EV_FLAG ID ASSIGN QUOTE_1 statement QUOTE_1
Rule 22    event_attr -> EV_FLAG ID ASSIGN QUOTE_2 statement QUOTE_2
Rule 23    attr -> static_attr
Rule 24    attr -> exec_attr
Rule 25    attr -> event_attr
Rule 26    id -> id PUNCT ID
Rule 27    id -> ID
Rule 28    end_el -> BG_CLOSE_EL ID END_EL
Rule 29    op_el -> BG_OPEN_EL ID attrs END_EL
Rule 30    for_el -> BG_OPEN_EL FOR ID IN id END_EL els BG_CLOSE_EL FOR END_EL
Rule 31    if_el -> BG_OPEN_EL IF expr END_EL els BG_CLOSE_EL IF END_EL
Rule 32    normal_el -> op_el els end_el
Rule 33    els -> els el
Rule 34    els -> el
Rule 35    els -> empty
Rule 36    el -> normal_el
Rule 37    el -> for_el
Rule 38    el -> if_el

Terminals, with rules where they appear

ASSIGN               : 11 14 15 16 19 20 21 22
BG_CLOSE_EL          : 28 30 31
BG_OPEN_EL           : 29 30 31
COMMA                : 
COMMENT              : 
END_EL               : 28 29 30 30 31 31
EV_FLAG              : 21 22
EXE_FLAG             : 19 20
FOR                  : 30 30
ID                   : 17 18 21 22 26 27 28 29 30
IF                   : 31 31
IN                   : 30
LPAR                 : 5 6
NAMESPACE_FLAG       : 18
NORMSTRING           : 16
NUMBER               : 14 15
PIPE                 : 7
PUNCT                : 26
QUOTE_1              : 14 14 19 19 21 21
QUOTE_2              : 15 15 20 20 22 22
RPAR                 : 5 6
error                : 

Nonterminals, with rules where they appear

assign_statement     : 12
attr                 : 2 3
attrs                : 2 29
binop_expr           : 10
el                   : 33 34
els                  : 30 31 32 33
empty                : 4 35
end_el               : 32
event_attr           : 25
exec_attr            : 24
expr                 : 5 7 7 11 13 19 20 31
fn                   : 9
for_el               : 37
id                   : 5 6 8 11 26 30
if_el                : 38
normal_el            : 36 0
op_el                : 32
statement            : 21 22
static_attr          : 23
tag_name             : 14 15 16 18 19 20

Parsing method: LALR

state 0

    (0) S' -> . normal_el
    (32) normal_el -> . op_el els end_el
    (29) op_el -> . BG_OPEN_EL ID attrs END_EL

    BG_OPEN_EL      shift and go to state 3

    normal_el                      shift and go to state 1
    op_el                          shift and go to state 2

state 1

    (0) S' -> normal_el .



state 2

    (32) normal_el -> op_el . els end_el
    (33) els -> . els el
    (34) els -> . el
    (35) els -> . empty
    (36) el -> . normal_el
    (37) el -> . for_el
    (38) el -> . if_el
    (1) empty -> .
    (32) normal_el -> . op_el els end_el
    (30) for_el -> . BG_OPEN_EL FOR ID IN id END_EL els BG_CLOSE_EL FOR END_EL
    (31) if_el -> . BG_OPEN_EL IF expr END_EL els BG_CLOSE_EL IF END_EL
    (29) op_el -> . BG_OPEN_EL ID attrs END_EL

  ! shift/reduce conflict for BG_OPEN_EL resolved as shift
    BG_CLOSE_EL     reduce using rule 1 (empty -> .)
    BG_OPEN_EL      shift and go to state 10

  ! BG_OPEN_EL      [ reduce using rule 1 (empty -> .) ]

    op_el                          shift and go to state 2
    els                            shift and go to state 4
    el                             shift and go to state 5
    empty                          shift and go to state 6
    normal_el                      shift and go to state 7
    for_el                         shift and go to state 8
    if_el                          shift and go to state 9

state 3

    (29) op_el -> BG_OPEN_EL . ID attrs END_EL

    ID              shift and go to state 11


state 4

    (32) normal_el -> op_el els . end_el
    (33) els -> els . el
    (28) end_el -> . BG_CLOSE_EL ID END_EL
    (36) el -> . normal_el
    (37) el -> . for_el
    (38) el -> . if_el
    (32) normal_el -> . op_el els end_el
    (30) for_el -> . BG_OPEN_EL FOR ID IN id END_EL els BG_CLOSE_EL FOR END_EL
    (31) if_el -> . BG_OPEN_EL IF expr END_EL els BG_CLOSE_EL IF END_EL
    (29) op_el -> . BG_OPEN_EL ID attrs END_EL

    BG_CLOSE_EL     shift and go to state 14
    BG_OPEN_EL      shift and go to state 10

    op_el                          shift and go to state 2
    end_el                         shift and go to state 12
    el                             shift and go to state 13
    normal_el                      shift and go to state 7
    for_el                         shift and go to state 8
    if_el                          shift and go to state 9

state 5

    (34) els -> el .

    BG_CLOSE_EL     reduce using rule 34 (els -> el .)
    BG_OPEN_EL      reduce using rule 34 (els -> el .)


state 6

    (35) els -> empty .

    BG_CLOSE_EL     reduce using rule 35 (els -> empty .)
    BG_OPEN_EL      reduce using rule 35 (els -> empty .)


state 7

    (36) el -> normal_el .

    BG_CLOSE_EL     reduce using rule 36 (el -> normal_el .)
    BG_OPEN_EL      reduce using rule 36 (el -> normal_el .)


state 8

    (37) el -> for_el .

    BG_CLOSE_EL     reduce using rule 37 (el -> for_el .)
    BG_OPEN_EL      reduce using rule 37 (el -> for_el .)


state 9

    (38) el -> if_el .

    BG_CLOSE_EL     reduce using rule 38 (el -> if_el .)
    BG_OPEN_EL      reduce using rule 38 (el -> if_el .)


state 10

    (30) for_el -> BG_OPEN_EL . FOR ID IN id END_EL els BG_CLOSE_EL FOR END_EL
    (31) if_el -> BG_OPEN_EL . IF expr END_EL els BG_CLOSE_EL IF END_EL
    (29) op_el -> BG_OPEN_EL . ID attrs END_EL

    FOR             shift and go to state 15
    IF              shift and go to state 16
    ID              shift and go to state 11


state 11

    (29) op_el -> BG_OPEN_EL ID . attrs END_EL
    (2) attrs -> . attrs attr
    (3) attrs -> . attr
    (4) attrs -> . empty
    (23) attr -> . static_attr
    (24) attr -> . exec_attr
    (25) attr -> . event_attr
    (1) empty -> .
    (14) static_attr -> . tag_name ASSIGN QUOTE_1 NUMBER QUOTE_1
    (15) static_attr -> . tag_name ASSIGN QUOTE_2 NUMBER QUOTE_2
    (16) static_attr -> . tag_name ASSIGN NORMSTRING
    (19) exec_attr -> . EXE_FLAG tag_name ASSIGN QUOTE_1 expr QUOTE_1
    (20) exec_attr -> . EXE_FLAG tag_name ASSIGN QUOTE_2 expr QUOTE_2
    (21) event_attr -> . EV_FLAG ID ASSIGN QUOTE_1 statement QUOTE_1
    (22) event_attr -> . EV_FLAG ID ASSIGN QUOTE_2 statement QUOTE_2
    (17) tag_name -> . ID
    (18) tag_name -> . tag_name NAMESPACE_FLAG ID

  ! shift/reduce conflict for EXE_FLAG resolved as shift
  ! shift/reduce conflict for EV_FLAG resolved as shift
  ! shift/reduce conflict for ID resolved as shift
    END_EL          reduce using rule 1 (empty -> .)
    EXE_FLAG        shift and go to state 25
    EV_FLAG         shift and go to state 26
    ID              shift and go to state 17

  ! EXE_FLAG        [ reduce using rule 1 (empty -> .) ]
  ! EV_FLAG         [ reduce using rule 1 (empty -> .) ]
  ! ID              [ reduce using rule 1 (empty -> .) ]

    attrs                          shift and go to state 18
    attr                           shift and go to state 19
    empty                          shift and go to state 20
    static_attr                    shift and go to state 21
    exec_attr                      shift and go to state 22
    event_attr                     shift and go to state 23
    tag_name                       shift and go to state 24

state 12

    (32) normal_el -> op_el els end_el .

    $end            reduce using rule 32 (normal_el -> op_el els end_el .)
    BG_CLOSE_EL     reduce using rule 32 (normal_el -> op_el els end_el .)
    BG_OPEN_EL      reduce using rule 32 (normal_el -> op_el els end_el .)


state 13

    (33) els -> els el .

    BG_CLOSE_EL     reduce using rule 33 (els -> els el .)
    BG_OPEN_EL      reduce using rule 33 (els -> els el .)


state 14

    (28) end_el -> BG_CLOSE_EL . ID END_EL

    ID              shift and go to state 27


state 15

    (30) for_el -> BG_OPEN_EL FOR . ID IN id END_EL els BG_CLOSE_EL FOR END_EL

    ID              shift and go to state 28


state 16

    (31) if_el -> BG_OPEN_EL IF . expr END_EL els BG_CLOSE_EL IF END_EL
    (8) expr -> . id
    (9) expr -> . fn
    (10) expr -> . binop_expr
    (26) id -> . id PUNCT ID
    (27) id -> . ID
    (5) fn -> . id LPAR expr RPAR
    (6) fn -> . id LPAR RPAR
    (7) binop_expr -> . expr PIPE expr

    ID              shift and go to state 33

    expr                           shift and go to state 29
    id                             shift and go to state 30
    fn                             shift and go to state 31
    binop_expr                     shift and go to state 32

state 17

    (17) tag_name -> ID .

    ASSIGN          reduce using rule 17 (tag_name -> ID .)
    NAMESPACE_FLAG  reduce using rule 17 (tag_name -> ID .)


state 18

    (29) op_el -> BG_OPEN_EL ID attrs . END_EL
    (2) attrs -> attrs . attr
    (23) attr -> . static_attr
    (24) attr -> . exec_attr
    (25) attr -> . event_attr
    (14) static_attr -> . tag_name ASSIGN QUOTE_1 NUMBER QUOTE_1
    (15) static_attr -> . tag_name ASSIGN QUOTE_2 NUMBER QUOTE_2
    (16) static_attr -> . tag_name ASSIGN NORMSTRING
    (19) exec_attr -> . EXE_FLAG tag_name ASSIGN QUOTE_1 expr QUOTE_1
    (20) exec_attr -> . EXE_FLAG tag_name ASSIGN QUOTE_2 expr QUOTE_2
    (21) event_attr -> . EV_FLAG ID ASSIGN QUOTE_1 statement QUOTE_1
    (22) event_attr -> . EV_FLAG ID ASSIGN QUOTE_2 statement QUOTE_2
    (17) tag_name -> . ID
    (18) tag_name -> . tag_name NAMESPACE_FLAG ID

    END_EL          shift and go to state 34
    EXE_FLAG        shift and go to state 25
    EV_FLAG         shift and go to state 26
    ID              shift and go to state 17

    attr                           shift and go to state 35
    static_attr                    shift and go to state 21
    exec_attr                      shift and go to state 22
    event_attr                     shift and go to state 23
    tag_name                       shift and go to state 24

state 19

    (3) attrs -> attr .

    END_EL          reduce using rule 3 (attrs -> attr .)
    EXE_FLAG        reduce using rule 3 (attrs -> attr .)
    EV_FLAG         reduce using rule 3 (attrs -> attr .)
    ID              reduce using rule 3 (attrs -> attr .)


state 20

    (4) attrs -> empty .

    END_EL          reduce using rule 4 (attrs -> empty .)
    EXE_FLAG        reduce using rule 4 (attrs -> empty .)
    EV_FLAG         reduce using rule 4 (attrs -> empty .)
    ID              reduce using rule 4 (attrs -> empty .)


state 21

    (23) attr -> static_attr .

    END_EL          reduce using rule 23 (attr -> static_attr .)
    EXE_FLAG        reduce using rule 23 (attr -> static_attr .)
    EV_FLAG         reduce using rule 23 (attr -> static_attr .)
    ID              reduce using rule 23 (attr -> static_attr .)


state 22

    (24) attr -> exec_attr .

    END_EL          reduce using rule 24 (attr -> exec_attr .)
    EXE_FLAG        reduce using rule 24 (attr -> exec_attr .)
    EV_FLAG         reduce using rule 24 (attr -> exec_attr .)
    ID              reduce using rule 24 (attr -> exec_attr .)


state 23

    (25) attr -> event_attr .

    END_EL          reduce using rule 25 (attr -> event_attr .)
    EXE_FLAG        reduce using rule 25 (attr -> event_attr .)
    EV_FLAG         reduce using rule 25 (attr -> event_attr .)
    ID              reduce using rule 25 (attr -> event_attr .)


state 24

    (14) static_attr -> tag_name . ASSIGN QUOTE_1 NUMBER QUOTE_1
    (15) static_attr -> tag_name . ASSIGN QUOTE_2 NUMBER QUOTE_2
    (16) static_attr -> tag_name . ASSIGN NORMSTRING
    (18) tag_name -> tag_name . NAMESPACE_FLAG ID

    ASSIGN          shift and go to state 36
    NAMESPACE_FLAG  shift and go to state 37


state 25

    (19) exec_attr -> EXE_FLAG . tag_name ASSIGN QUOTE_1 expr QUOTE_1
    (20) exec_attr -> EXE_FLAG . tag_name ASSIGN QUOTE_2 expr QUOTE_2
    (17) tag_name -> . ID
    (18) tag_name -> . tag_name NAMESPACE_FLAG ID

    ID              shift and go to state 17

    tag_name                       shift and go to state 38

state 26

    (21) event_attr -> EV_FLAG . ID ASSIGN QUOTE_1 statement QUOTE_1
    (22) event_attr -> EV_FLAG . ID ASSIGN QUOTE_2 statement QUOTE_2

    ID              shift and go to state 39


state 27

    (28) end_el -> BG_CLOSE_EL ID . END_EL

    END_EL          shift and go to state 40


state 28

    (30) for_el -> BG_OPEN_EL FOR ID . IN id END_EL els BG_CLOSE_EL FOR END_EL

    IN              shift and go to state 41


state 29

    (31) if_el -> BG_OPEN_EL IF expr . END_EL els BG_CLOSE_EL IF END_EL
    (7) binop_expr -> expr . PIPE expr

    END_EL          shift and go to state 42
    PIPE            shift and go to state 43


state 30

    (8) expr -> id .
    (26) id -> id . PUNCT ID
    (5) fn -> id . LPAR expr RPAR
    (6) fn -> id . LPAR RPAR

    END_EL          reduce using rule 8 (expr -> id .)
    PIPE            reduce using rule 8 (expr -> id .)
    RPAR            reduce using rule 8 (expr -> id .)
    QUOTE_1         reduce using rule 8 (expr -> id .)
    QUOTE_2         reduce using rule 8 (expr -> id .)
    PUNCT           shift and go to state 44
    LPAR            shift and go to state 45


state 31

    (9) expr -> fn .

    END_EL          reduce using rule 9 (expr -> fn .)
    PIPE            reduce using rule 9 (expr -> fn .)
    RPAR            reduce using rule 9 (expr -> fn .)
    QUOTE_1         reduce using rule 9 (expr -> fn .)
    QUOTE_2         reduce using rule 9 (expr -> fn .)


state 32

    (10) expr -> binop_expr .

    END_EL          reduce using rule 10 (expr -> binop_expr .)
    PIPE            reduce using rule 10 (expr -> binop_expr .)
    RPAR            reduce using rule 10 (expr -> binop_expr .)
    QUOTE_1         reduce using rule 10 (expr -> binop_expr .)
    QUOTE_2         reduce using rule 10 (expr -> binop_expr .)


state 33

    (27) id -> ID .

    PUNCT           reduce using rule 27 (id -> ID .)
    LPAR            reduce using rule 27 (id -> ID .)
    END_EL          reduce using rule 27 (id -> ID .)
    PIPE            reduce using rule 27 (id -> ID .)
    RPAR            reduce using rule 27 (id -> ID .)
    QUOTE_1         reduce using rule 27 (id -> ID .)
    QUOTE_2         reduce using rule 27 (id -> ID .)
    ASSIGN          reduce using rule 27 (id -> ID .)


state 34

    (29) op_el -> BG_OPEN_EL ID attrs END_EL .

    BG_OPEN_EL      reduce using rule 29 (op_el -> BG_OPEN_EL ID attrs END_EL .)
    BG_CLOSE_EL     reduce using rule 29 (op_el -> BG_OPEN_EL ID attrs END_EL .)


state 35

    (2) attrs -> attrs attr .

    END_EL          reduce using rule 2 (attrs -> attrs attr .)
    EXE_FLAG        reduce using rule 2 (attrs -> attrs attr .)
    EV_FLAG         reduce using rule 2 (attrs -> attrs attr .)
    ID              reduce using rule 2 (attrs -> attrs attr .)


state 36

    (14) static_attr -> tag_name ASSIGN . QUOTE_1 NUMBER QUOTE_1
    (15) static_attr -> tag_name ASSIGN . QUOTE_2 NUMBER QUOTE_2
    (16) static_attr -> tag_name ASSIGN . NORMSTRING

    QUOTE_1         shift and go to state 46
    QUOTE_2         shift and go to state 47
    NORMSTRING      shift and go to state 48


state 37

    (18) tag_name -> tag_name NAMESPACE_FLAG . ID

    ID              shift and go to state 49


state 38

    (19) exec_attr -> EXE_FLAG tag_name . ASSIGN QUOTE_1 expr QUOTE_1
    (20) exec_attr -> EXE_FLAG tag_name . ASSIGN QUOTE_2 expr QUOTE_2
    (18) tag_name -> tag_name . NAMESPACE_FLAG ID

    ASSIGN          shift and go to state 50
    NAMESPACE_FLAG  shift and go to state 37


state 39

    (21) event_attr -> EV_FLAG ID . ASSIGN QUOTE_1 statement QUOTE_1
    (22) event_attr -> EV_FLAG ID . ASSIGN QUOTE_2 statement QUOTE_2

    ASSIGN          shift and go to state 51


state 40

    (28) end_el -> BG_CLOSE_EL ID END_EL .

    $end            reduce using rule 28 (end_el -> BG_CLOSE_EL ID END_EL .)
    BG_CLOSE_EL     reduce using rule 28 (end_el -> BG_CLOSE_EL ID END_EL .)
    BG_OPEN_EL      reduce using rule 28 (end_el -> BG_CLOSE_EL ID END_EL .)


state 41

    (30) for_el -> BG_OPEN_EL FOR ID IN . id END_EL els BG_CLOSE_EL FOR END_EL
    (26) id -> . id PUNCT ID
    (27) id -> . ID

    ID              shift and go to state 33

    id                             shift and go to state 52

state 42

    (31) if_el -> BG_OPEN_EL IF expr END_EL . els BG_CLOSE_EL IF END_EL
    (33) els -> . els el
    (34) els -> . el
    (35) els -> . empty
    (36) el -> . normal_el
    (37) el -> . for_el
    (38) el -> . if_el
    (1) empty -> .
    (32) normal_el -> . op_el els end_el
    (30) for_el -> . BG_OPEN_EL FOR ID IN id END_EL els BG_CLOSE_EL FOR END_EL
    (31) if_el -> . BG_OPEN_EL IF expr END_EL els BG_CLOSE_EL IF END_EL
    (29) op_el -> . BG_OPEN_EL ID attrs END_EL

  ! shift/reduce conflict for BG_OPEN_EL resolved as shift
    BG_CLOSE_EL     reduce using rule 1 (empty -> .)
    BG_OPEN_EL      shift and go to state 10

  ! BG_OPEN_EL      [ reduce using rule 1 (empty -> .) ]

    els                            shift and go to state 53
    el                             shift and go to state 5
    empty                          shift and go to state 6
    normal_el                      shift and go to state 7
    for_el                         shift and go to state 8
    if_el                          shift and go to state 9
    op_el                          shift and go to state 2

state 43

    (7) binop_expr -> expr PIPE . expr
    (8) expr -> . id
    (9) expr -> . fn
    (10) expr -> . binop_expr
    (26) id -> . id PUNCT ID
    (27) id -> . ID
    (5) fn -> . id LPAR expr RPAR
    (6) fn -> . id LPAR RPAR
    (7) binop_expr -> . expr PIPE expr

    ID              shift and go to state 33

    expr                           shift and go to state 54
    id                             shift and go to state 30
    fn                             shift and go to state 31
    binop_expr                     shift and go to state 32

state 44

    (26) id -> id PUNCT . ID

    ID              shift and go to state 55


state 45

    (5) fn -> id LPAR . expr RPAR
    (6) fn -> id LPAR . RPAR
    (8) expr -> . id
    (9) expr -> . fn
    (10) expr -> . binop_expr
    (26) id -> . id PUNCT ID
    (27) id -> . ID
    (5) fn -> . id LPAR expr RPAR
    (6) fn -> . id LPAR RPAR
    (7) binop_expr -> . expr PIPE expr

    RPAR            shift and go to state 57
    ID              shift and go to state 33

    id                             shift and go to state 30
    expr                           shift and go to state 56
    fn                             shift and go to state 31
    binop_expr                     shift and go to state 32

state 46

    (14) static_attr -> tag_name ASSIGN QUOTE_1 . NUMBER QUOTE_1

    NUMBER          shift and go to state 58


state 47

    (15) static_attr -> tag_name ASSIGN QUOTE_2 . NUMBER QUOTE_2

    NUMBER          shift and go to state 59


state 48

    (16) static_attr -> tag_name ASSIGN NORMSTRING .

    END_EL          reduce using rule 16 (static_attr -> tag_name ASSIGN NORMSTRING .)
    EXE_FLAG        reduce using rule 16 (static_attr -> tag_name ASSIGN NORMSTRING .)
    EV_FLAG         reduce using rule 16 (static_attr -> tag_name ASSIGN NORMSTRING .)
    ID              reduce using rule 16 (static_attr -> tag_name ASSIGN NORMSTRING .)


state 49

    (18) tag_name -> tag_name NAMESPACE_FLAG ID .

    ASSIGN          reduce using rule 18 (tag_name -> tag_name NAMESPACE_FLAG ID .)
    NAMESPACE_FLAG  reduce using rule 18 (tag_name -> tag_name NAMESPACE_FLAG ID .)


state 50

    (19) exec_attr -> EXE_FLAG tag_name ASSIGN . QUOTE_1 expr QUOTE_1
    (20) exec_attr -> EXE_FLAG tag_name ASSIGN . QUOTE_2 expr QUOTE_2

    QUOTE_1         shift and go to state 60
    QUOTE_2         shift and go to state 61


state 51

    (21) event_attr -> EV_FLAG ID ASSIGN . QUOTE_1 statement QUOTE_1
    (22) event_attr -> EV_FLAG ID ASSIGN . QUOTE_2 statement QUOTE_2

    QUOTE_1         shift and go to state 62
    QUOTE_2         shift and go to state 63


state 52

    (30) for_el -> BG_OPEN_EL FOR ID IN id . END_EL els BG_CLOSE_EL FOR END_EL
    (26) id -> id . PUNCT ID

    END_EL          shift and go to state 64
    PUNCT           shift and go to state 44


state 53

    (31) if_el -> BG_OPEN_EL IF expr END_EL els . BG_CLOSE_EL IF END_EL
    (33) els -> els . el
    (36) el -> . normal_el
    (37) el -> . for_el
    (38) el -> . if_el
    (32) normal_el -> . op_el els end_el
    (30) for_el -> . BG_OPEN_EL FOR ID IN id END_EL els BG_CLOSE_EL FOR END_EL
    (31) if_el -> . BG_OPEN_EL IF expr END_EL els BG_CLOSE_EL IF END_EL
    (29) op_el -> . BG_OPEN_EL ID attrs END_EL

    BG_CLOSE_EL     shift and go to state 65
    BG_OPEN_EL      shift and go to state 10

    el                             shift and go to state 13
    normal_el                      shift and go to state 7
    for_el                         shift and go to state 8
    if_el                          shift and go to state 9
    op_el                          shift and go to state 2

state 54

    (7) binop_expr -> expr PIPE expr .
    (7) binop_expr -> expr . PIPE expr

  ! shift/reduce conflict for PIPE resolved as shift
    END_EL          reduce using rule 7 (binop_expr -> expr PIPE expr .)
    RPAR            reduce using rule 7 (binop_expr -> expr PIPE expr .)
    QUOTE_1         reduce using rule 7 (binop_expr -> expr PIPE expr .)
    QUOTE_2         reduce using rule 7 (binop_expr -> expr PIPE expr .)
    PIPE            shift and go to state 43

  ! PIPE            [ reduce using rule 7 (binop_expr -> expr PIPE expr .) ]


state 55

    (26) id -> id PUNCT ID .

    PUNCT           reduce using rule 26 (id -> id PUNCT ID .)
    LPAR            reduce using rule 26 (id -> id PUNCT ID .)
    END_EL          reduce using rule 26 (id -> id PUNCT ID .)
    PIPE            reduce using rule 26 (id -> id PUNCT ID .)
    RPAR            reduce using rule 26 (id -> id PUNCT ID .)
    QUOTE_1         reduce using rule 26 (id -> id PUNCT ID .)
    QUOTE_2         reduce using rule 26 (id -> id PUNCT ID .)
    ASSIGN          reduce using rule 26 (id -> id PUNCT ID .)


state 56

    (5) fn -> id LPAR expr . RPAR
    (7) binop_expr -> expr . PIPE expr

    RPAR            shift and go to state 66
    PIPE            shift and go to state 43


state 57

    (6) fn -> id LPAR RPAR .

    END_EL          reduce using rule 6 (fn -> id LPAR RPAR .)
    PIPE            reduce using rule 6 (fn -> id LPAR RPAR .)
    RPAR            reduce using rule 6 (fn -> id LPAR RPAR .)
    QUOTE_1         reduce using rule 6 (fn -> id LPAR RPAR .)
    QUOTE_2         reduce using rule 6 (fn -> id LPAR RPAR .)


state 58

    (14) static_attr -> tag_name ASSIGN QUOTE_1 NUMBER . QUOTE_1

    QUOTE_1         shift and go to state 67


state 59

    (15) static_attr -> tag_name ASSIGN QUOTE_2 NUMBER . QUOTE_2

    QUOTE_2         shift and go to state 68


state 60

    (19) exec_attr -> EXE_FLAG tag_name ASSIGN QUOTE_1 . expr QUOTE_1
    (8) expr -> . id
    (9) expr -> . fn
    (10) expr -> . binop_expr
    (26) id -> . id PUNCT ID
    (27) id -> . ID
    (5) fn -> . id LPAR expr RPAR
    (6) fn -> . id LPAR RPAR
    (7) binop_expr -> . expr PIPE expr

    ID              shift and go to state 33

    expr                           shift and go to state 69
    id                             shift and go to state 30
    fn                             shift and go to state 31
    binop_expr                     shift and go to state 32

state 61

    (20) exec_attr -> EXE_FLAG tag_name ASSIGN QUOTE_2 . expr QUOTE_2
    (8) expr -> . id
    (9) expr -> . fn
    (10) expr -> . binop_expr
    (26) id -> . id PUNCT ID
    (27) id -> . ID
    (5) fn -> . id LPAR expr RPAR
    (6) fn -> . id LPAR RPAR
    (7) binop_expr -> . expr PIPE expr

    ID              shift and go to state 33

    expr                           shift and go to state 70
    id                             shift and go to state 30
    fn                             shift and go to state 31
    binop_expr                     shift and go to state 32

state 62

    (21) event_attr -> EV_FLAG ID ASSIGN QUOTE_1 . statement QUOTE_1
    (12) statement -> . assign_statement
    (13) statement -> . expr
    (11) assign_statement -> . id ASSIGN expr
    (8) expr -> . id
    (9) expr -> . fn
    (10) expr -> . binop_expr
    (26) id -> . id PUNCT ID
    (27) id -> . ID
    (5) fn -> . id LPAR expr RPAR
    (6) fn -> . id LPAR RPAR
    (7) binop_expr -> . expr PIPE expr

    ID              shift and go to state 33

    statement                      shift and go to state 71
    assign_statement               shift and go to state 72
    expr                           shift and go to state 73
    id                             shift and go to state 74
    fn                             shift and go to state 31
    binop_expr                     shift and go to state 32

state 63

    (22) event_attr -> EV_FLAG ID ASSIGN QUOTE_2 . statement QUOTE_2
    (12) statement -> . assign_statement
    (13) statement -> . expr
    (11) assign_statement -> . id ASSIGN expr
    (8) expr -> . id
    (9) expr -> . fn
    (10) expr -> . binop_expr
    (26) id -> . id PUNCT ID
    (27) id -> . ID
    (5) fn -> . id LPAR expr RPAR
    (6) fn -> . id LPAR RPAR
    (7) binop_expr -> . expr PIPE expr
